<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background2"
    tools:context=".MenuActivity"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_image"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:src="@drawable/pixelspacelogo"
        android:contentDescription="@string/logo_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_BTN_fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/fast_speed"
            android:background="@android:color/transparent"
            android:textColor="#FF6D00"
            android:fontFamily="@font/zambira"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_BTN_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/slow_speed"
            android:background="@android:color/transparent"
            android:textColor="#FF6D00"
            android:fontFamily="@font/zambira"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_BTN_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sensor_mode"
            android:background="@android:color/transparent"
            android:textColor="#FF6D00"
            android:fontFamily="@font/zambira"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_BTN_highscores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:background="@android:color/transparent"
            android:textColor="#FF6D00"
            android:fontFamily="@font/zambira"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>
